tre-fix horizontal scroll

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -191,7 +191,7 @@ a:focus {
 }
 
 .function-title {
-    width: 100%;
+    width: 90%;
     margin-left: 20px;
 }
 
@@ -418,7 +418,7 @@ footer {
     }
 
     .function-container {
-        width: 30%;
+        width: 25%;
     }
 
     .cards-container {
